# alg-and-prog-project

./: .gitignore
AppModule/: CMakeLists.txt
AppModule/src/: main.cpp
AppModule/src/test/: answer.cpp  answer.h  quest.cpp  quest.h  test.cpp  test.h
AppModuleRemake/: CMakeLists.txt  CMakePresets.json
AppModuleRemake/include/: Authentication.h  Database.h  Jwt.h  Server.h  Test_d.h
AppModuleRemake/src/: main.cpp
AppModuleRemake/src/app_server/: DefaultServerInitializer.cpp  ServerConfiguration.h
AppModuleRemake/src/app_server/abstractions/: Controller.h  ServerInitializer.h
AppModuleRemake/src/app_server/controllers/: AnswerRestController.cpp  AttemptRestController.cpp  CourseRestController.cpp  HomeController.cpp  QuestRestController.cpp  TestRestController.cpp  UserRestController.cpp
AppModuleRemake/src/app_server/controllers/abstractions/: AnswerRestController.h  AttemptRestController.h  CourseRestController.h  QuestRestController.h  TestRestController.h  UserRestController.h
AppModuleRemake/src/authentication/: AccessRequestValidator.cpp
AppModuleRemake/src/authentication/abstractions/: AccessRequestValidator.h  ValidateInfo.h
AppModuleRemake/src/database/: DatabaseConfiguration.h
AppModuleRemake/src/database/abstractions/: Data.h  DataAdapter.h  DataModificator.h  DataRemover.h  DataUploader.h  DatabaseInitializer.h  DatabaseUtil.h
AppModuleRemake/src/database/postgresql/: DataAdapter.cpp  DataModificator.cpp  DataRemover.cpp  DataUploader.cpp  DatabaseInitializer.cpp  Postgresql.h
AppModuleRemake/src/database/postgresql/workpiece/upload/: AnswerWorkpiece.cpp  AnswerWorkpiece.h  AttemptWorkpiece.h  CourseWorkpiece.cpp  CourseWorkpiece.h  MarkWorkpiece.cpp  MarkWorkpiece.h  QuestTestWorkpiece.h  QuestWorkpiece.cpp  QuestWorkpiece.h  TestWorkPiece.cpp  TestWorkPiece.h  UserCourseWorkpiece.h  UserWorkpiece.cpp  UserWorkpiece.h
AppModuleRemake/src/jwt/: JwtAdapter.cpp  JwtConfiguration.h  JwtRequestParser.cpp  JwtRequestValidator.cpp  JwtValidator.cpp
AppModuleRemake/src/jwt/abstractions/: AccessTokenBody.h  JwtAdapter.h  JwtRequestParser.h  JwtRequestValidator.h  JwtValidator.h
AppModuleRemake/src/test/: answer.cpp  quest.cpp  test.cpp
AppModuleRemake/src/test/abstractions/: answer.h  quest.h  test.h
AuthorizationModule/: go.mod  go.sum  main.go
AuthorizationModule/authentication/: AuthenticationServer.go  AuthenticationServerHandler.go  ErrorSender.go
AuthorizationModule/authentication/common/: ResponseDataReader.go  UserDataRequired.go
AuthorizationModule/authentication/database/: DatabaseServerHandler.go
AuthorizationModule/authentication/github/: GithubAuthExecutor.go  GithubDataSerializator.go  GithubOAuthAdapter.go  GithubReferenceCreator.go  GithubTokenChanger.go
AuthorizationModule/authentication/jwt/: JwtTokenDecryptor.go  JwtTokenGenerator.go  JwtTokenRefresher.go  JwtTokenValidator.go
AuthorizationModule/authentication/yandex/: YandexAuthExecutor.go  YandexDataSerializator.go  YandexOAuthAdapter.go  YandexReferenceCreator.go  YandexTokenChanger.go
AuthorizationModule/config/: AppConfigurationConstants.go
AuthorizationModule/database/: AuthorizeMongoConstants.go  DatabaseInitializer.go  Role.go  RoleFinder.go  RolePermissionsGenerator.go  User.go  UserCreator.go  UserFinder.go  UserModificator.go  UserRemover.go
WebModule/NameGenerator/: pom.xml
WebModule/NameGenerator/src/main/java/org/ziptegrity/: Main.java
WebModule/SimpleDDosWithDynamicProxyFinder/: pom.xml
WebModule/SimpleDDosWithDynamicProxyFinder/src/main/java/org/defix/: Main.java
WebModule/SimpleDDosWithDynamicProxyFinder/src/main/java/org/defix/ddos/: DDosConfiguration.java  DDosRunner.java
WebModule/SimpleDDosWithDynamicProxyFinder/src/main/java/org/defix/ddos/executor/: HttpDosExecutor.java
WebModule/SimpleDDosWithDynamicProxyFinder/src/main/java/org/defix/eventSystem/abstractions/: BinaryEvent.java  UnaryEvent.java
WebModule/SimpleDDosWithDynamicProxyFinder/src/main/java/org/defix/proxyDynamicFinder/: ProxyDynamicFinderConfiguration.java
WebModule/SimpleDDosWithDynamicProxyFinder/src/main/java/org/defix/proxyDynamicFinder/checker/: IpWithPortProxyChecker.java
WebModule/SimpleDDosWithDynamicProxyFinder/src/main/java/org/defix/proxyDynamicFinder/objects/: ProxyBody.java
WebModule/SimpleDDosWithDynamicProxyFinder/src/main/java/org/defix/proxyDynamicFinder/site/: ProxyCompassSiteProxyParser.java  ProxyFreeOnlySiteProxyParser.java
WebModule/SimpleDDosWithDynamicProxyFinder/src/main/java/org/defix/proxyDynamicFinder/thread/: AsyncSiteProxyFinder.java
WebModule/WifiHackUtils/: pom.xml
WebModule/WifiHackUtils/src/main/java/org/defix/: Calculator.java
WebModule/learn/: pom.xml
WebModule/learn/src/main/java/org/defix/: Main.java  MyBinaryTree.java  MySemaphore.java
WebModule/web/: pom.xml
WebModule/web/src/main/java/com/sigma_squad/web/: WebApplication.java
WebModule/web/src/main/java/com/sigma_squad/web/authorization/: AuthStatus.java  AuthorizationController.java  HomeController.java  ResponseData.java
WebModule/web/src/main/java/com/sigma_squad/web/configurations/: RedisConfiguration.java  SpringMVCConfiguration.java
WebModule/web/src/main/resources/: application.properties
WebModule/web/src/main/resources/templates/: home.html  login.html
WebModule/web/src/test/java/com/sigma_squad/web/: WebApplicationTests.java
(+29 files in other folders)
